POC refactor of Kind0 operations

--- a/ConsoleZMachine/ConsoleZMachine.csproj
+++ b/ConsoleZMachine/ConsoleZMachine.csproj
@@ -49,6 +49,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="ZORK1.DAT">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ZMachineLib\ZMachineLib.csproj">
