--- a/ZMachineLib/ZMachineLib.csproj
+++ b/ZMachineLib/ZMachineLib.csproj
@@ -19,4 +19,8 @@
     <PackageReference Include="System.Runtime.Serialization.Primitives" Version="4.3.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Operations\Kind1\" />
+  </ItemGroup>
+
 </Project>
