Attempt to auto-run a full game for testing

--- a/ZMachineLib.Feature.Tests/ZMachineLib.Feature.Tests.csproj
+++ b/ZMachineLib.Feature.Tests/ZMachineLib.Feature.Tests.csproj
@@ -19,6 +19,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="zork1.349.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="ZORK1.DAT">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
