--- a/ConsoleZMachine/ConsoleZMachine.csproj
+++ b/ConsoleZMachine/ConsoleZMachine.csproj
@@ -52,6 +52,15 @@
     <None Include="ZORK1.DAT">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Include="zork1.z3">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="zork2.z3">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="zork3.z3">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ZMachineLib\ZMachineLib.csproj">
