--- a/ZMachineLib.Feature.Tests/ZMachineLib.Feature.Tests.csproj
+++ b/ZMachineLib.Feature.Tests/ZMachineLib.Feature.Tests.csproj
@@ -25,6 +25,15 @@
     <None Update="ZORK1.DAT">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="zork1.z3">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="zork2.z3">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="zork3.z3">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
