Add simple menu to select individual file if folder is supplied

--- a/ZPlay/Properties/launchSettings.json
+++ b/ZPlay/Properties/launchSettings.json
@@ -1,8 +1,7 @@
 {
   "profiles": {
     "ZPlay": {
-      "commandName": "Project",
-      "commandLineArgs": "\"N:\\Vault\\Infocom Files\\zFiles\\bureaucracy.z4\""
+      "commandName": "Project"
     }
   }
 }
