Add basic ILogger support and wire up a few Operations to test it out

--- a/ZPlay/Properties/launchSettings.json
+++ b/ZPlay/Properties/launchSettings.json
@@ -1,7 +1,8 @@
 {
   "profiles": {
     "ZPlay": {
-      "commandName": "Project"
+      "commandName": "Project",
+      "commandLineArgs": "D:\\zFiles\\zork1.z3"
     }
   }
 }
