--- a/ZPlay/appSettings.json
+++ b/ZPlay/appSettings.json
@@ -1,3 +1,11 @@
 ﻿{
-  "zFileDir" :  "D:\\zfiles"
+  "zFileDir": "D:\\zfiles",
+  "Logging": {
+    "Console": {
+      "IncludeScopes": false,
+      "LogLevel": {
+        "Default": "None"
+      }
+    }
+  }
 }
