--- a/ZMachineLib.Feature.Tests/ZMachineLib.Feature.Tests.csproj
+++ b/ZMachineLib.Feature.Tests/ZMachineLib.Feature.Tests.csproj
@@ -19,7 +19,22 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="quick-run-zork-1.txt">
+    <None Update="ForOriginalZMachine-quick-run-zork1.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="quick-run-zork-1-4.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="quick-run-zork-1-3.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="quick-run-zork-1-2.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="quick-run-zork-1-1.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="quick-run-zork-1-5.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Update="zork1.349.txt">
