--- a/ZTest/Properties/launchSettings.json
+++ b/ZTest/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "ZTest": {
       "commandName": "Project",
-      "commandLineArgs": "D:\\zFiles\\zork1.z3 D:\\Src\\ZMachineLib\\ZMachineLib.Feature.Tests\\zork1.rand0.walkthru"
+      "commandLineArgs": "D:\\zFiles\\zork1.z3 D:\\Src\\ZMachineLib\\ZMachineLib.Feature.Tests\\zork1.rand0.ztest"
     }
   }
 }
