--- a/ZMachineLib.Feature.Tests/ZMachineLib.Feature.Tests.csproj
+++ b/ZMachineLib.Feature.Tests/ZMachineLib.Feature.Tests.csproj
@@ -11,7 +11,7 @@
     <PackageReference Include="nunit" Version="3.12.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.15.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.0" />
-    <PackageReference Include="Shouldly" Version="3.0.2" />
+    <PackageReference Include="Shouldly" Version="4.0.0-beta0002" />
   </ItemGroup>
 
   <ItemGroup>
