Fix bug with Zscii string handling in the dictionary

--- a/ZDump/Properties/launchSettings.json
+++ b/ZDump/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "ZDump": {
       "commandName": "Project",
-      "commandLineArgs": "D:\\zfiles\\zork1.z3"
+      "commandLineArgs": "\"\\\\nas\\NAS\\Vault\\Infocom Files\\zFiles\\enchanter.z3\""
     }
   }
 }
